--- a/styles/CodeCard.module.scss
+++ b/styles/CodeCard.module.scss
@@ -1,7 +1,4 @@
 .cardContainer {
-  background: #232526;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin-top: 75px;
   border-radius: 6.25px;
   width: 70vw;
@@ -16,7 +13,6 @@
     background-color: rgba(0, 0, 0, 0.15);
     flex-shrink: 0;
     display: flex;
-    color: grey;
     position: relative;
 
     div {
@@ -24,11 +20,8 @@
       height: 30px;
       width: 150px;
       text-align: left;
-      background-color: rgba(0, 0, 0, 0.15);
+      background-color: rgba(0, 0, 0, 0.10);
       transition: all .075s ease-in-out;
-      // white-space: nowrap;
-      // text-overflow: ellipsis;
-      // overflow: hidden;
       @apply truncate;
 
       i {
@@ -39,17 +32,20 @@
     div:hover {
       color: white;
       background-color: rgba(255, 255, 255, 0.025);
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
       cursor: pointer;
     }
 
     .selected {
       color: white;
-      background-image: linear-gradient(to right, #ffa2a240 0%, #bbc1bf40 19%, #57c6e140 42%, #b49fda40 79%, #7ac5d840 100%);
+      background: #944a90;
+      background: -webkit-linear-gradient(to right, #0b879380, #944a9080);
+      background: linear-gradient(to right, #0b879380, #944a9080);
     }
 
     .render {
       color: white;
-      background-image: linear-gradient(83deg, rgba(39,66,65,1) 0%, rgba(50,135,75,0.5) 100%);
+      background-image: linear-gradient(83deg, rgba(39,66,65,.75) 0%, rgba(50,135,75,0.5) 100%);
     }
   }
 
@@ -61,7 +57,6 @@
   pre {
     flex: 1;
     padding: 10px;
-    color: white;
     overflow-x: auto;
   }
 
@@ -79,30 +74,20 @@
     width: 100%;
     border: 0;
     background: rgb(39,66,65);
-    background: linear-gradient(83deg, rgba(39,66,65,1) 0%, rgba(50,135,75,1) 100%);
+    background: linear-gradient(83deg, rgb(47, 97, 95) 0%, rgba(50,135,75,1) 100%);
   }
 }
 
-.cardContainer *::-webkit-scrollbar {
-  width: 12.5px;
-  height: 12.5px;
+@media only screen and (max-width: 768px) {
+  .cardContainer {
+    width: 80vw;
+    margin-top: 10vw;
+  }
 }
 
-.cardContainer *::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.125);
-  border-radius: 6.25px;
-}
-
-.cardContainer *::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 255, 0.175);
-}
-
-.cardContainer *::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.125);
-  border-radius: 6.25px;
-  object-fit: fill;
-}
-
-.cardContainer *::-webkit-scrollbar-corner {
-  background-color: rgba(0, 0, 0, 0);
+@media only screen and (max-width: 640px) {
+  .cardContainer {
+    width: 90vw;
+    margin-top: 5vw;
+  }
 }
