--- a/apps/Pricing Component/App.module.scss
+++ b/apps/Pricing Component/App.module.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   min-height: 650px;
   min-width: 200px;
   // background-color: #8EC5FC;
@@ -210,7 +210,7 @@
     }
   
     .card {
-      padding: 40px 20px 20px 20px;
+      padding: 40px 10vw 25px 10vw;
   
       .pricing_container {
         flex-direction: column;
