--- a/styles/CodeCard.module.scss
+++ b/styles/CodeCard.module.scss
@@ -16,7 +16,7 @@
     position: relative;
 
     div {
-      padding: .5em 0 .5em .5em;
+      padding: .5em;
       width: 150px;
       text-align: left;
       background-color: rgba(0, 0, 0, 0.10);
