--- a/styles/CodeCard.module.scss
+++ b/styles/CodeCard.module.scss
@@ -16,12 +16,12 @@
     position: relative;
 
     div {
+      margin-right: 1px;
       padding: .5em;
       width: 150px;
       text-align: left;
       background-color: rgba(0, 0, 0, 0.10);
       transition: all .075s ease-in-out;
-      border-right: 1px solid rgba(0, 0, 0, 0.05);
       @apply truncate;
 
       i {
@@ -30,7 +30,7 @@
     }
 
     div:last-of-type {
-      border: none;
+      margin-right: 0;
     }
 
     div:hover {
@@ -45,13 +45,11 @@
       background: #944a90;
       background: -webkit-linear-gradient(to right, #0b879380, #944a9080);
       background: linear-gradient(to right, #0b879380, #944a9080);
-      border: none !important;
     }
 
     .render {
       color: white;
       background-image: linear-gradient(83deg, rgba(39,66,65,.75) 0%, rgba(50,135,75,0.5) 100%);
-      border: none !important;
     }
   }
 
