--- a/styles/Modal-apps.module.scss
+++ b/styles/Modal-apps.module.scss
@@ -12,16 +12,13 @@
   }
 
   .app_container {
-    // width: 100%;
     min-height: 75px;
     height: 10vw;
     max-height: 100px;
-    // background: linear-gradient(0deg, #c9cbce40 0%, #d9e5f1b0 100%), radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
-    // background-blend-mode: screen;
-    // border-radius: 15px;
-    // display: flex;
-    // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    // transition: background-color 0.15s ease-out;
+
+    > div {
+      transition: all .1s ease-out;
+    }
 
     .image_container {
       height: 100%;
@@ -51,12 +48,16 @@
     }
   }
 
-  .app_container:last-of-type {
-    // margin: 0;
-  }
-
   .app_container:hover {
     background-color: #fffb;
     transition: background-color 0.075s ease-in;
+
+    .image_container {
+      transform: scale(1.125);
+    }
+
+    .test {
+      transform: scale(1.025);
+    }
   }
 }
