--- a/apps/Advanced Todos/styles/Calander.module.scss
+++ b/apps/Advanced Todos/styles/Calander.module.scss
@@ -1,107 +1,114 @@
-.calander_container {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-   -khtml-user-select: none; /* Konqueror HTML */
-     -moz-user-select: none; /* Old versions of Firefox */
-      -ms-user-select: none; /* Internet Explorer/Edge */
-          user-select: none; /* Non-prefixed version, currently
-                                supported by Chrome, Edge, Opera and Firefox */
+.dark {
+  box-shadow: 0 0 1.5em rgba(70, 210, 255, 0.7);
+  .grid_container {
+    > div {
+      background-color: black;
+    }
+    > div:hover {
+      background-color: rgba(37, 37, 37, 0.75);
+      color: white;
+    }
+    .other_month {
+      background-color: rgb(31, 41, 55);
+    }
+    .other_month:hover {
+      background-color: rgb(66, 80, 97);
+    }
+    .green {
+      background-color: rgb(42, 139, 71);
+      color: rgba(255, 255, 255, 0.7);
+    }
+    .green:hover {
+      background-color: rgb(44, 180, 90);
+      color: black;
+    }
+    .red {
+      background-color: rgba(255, 75, 75, 0.5);
+      color: rgba(255, 255, 255, 0.7);
+    }
+    .red:hover {
+      background-color: rgba(214, 88, 65, 0.85);
+      color: black;
+    }
+    .todo {
+      background-color: rgb(143, 125, 10);
+      color: rgba(255, 255, 255, 0.7);
+    }
+    .todo:hover {
+      background-color: rgba(255, 226, 39, 0.75);
+      color: black;
+    }
+  }
+}
 
+.light {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+  .grid_container {
+    > div {
+      background-color: rgba(200, 200, 200, 0.5);
+    }
+    > div:hover {
+      background-color: #fffa;
+    }
+    .other_month {
+      background-color: rgba(140, 140, 140, 0.5);
+    }
+    .other_month:hover {
+      background-color: rgba(140, 140, 140, 0.75);
+    }
+    .green {
+      background-color: springgreen;
+    }
+    .green:hover {
+      background-color: rgb(124, 255, 168);
+    }
+    .red {
+      background-color: rgb(255, 111, 86);
+    }
+    .red:hover {
+      background-color: rgb(255, 160, 144);
+    }
+    .todo {
+      background-color: rgba(255, 226, 39, 1);
+    }
+    .todo:hover {
+      background-color: rgb(243, 240, 79);
+    }
+  }
+}
 
+.calander_container {
   height: 15vw;
-  min-height: calc(250px);
-
+  min-height: 250px;
   .days_container {
     flex: .5;
-    display: flex;
-    justify-content: space-around;
-    border-bottom-left-radius: 0 !important;
-    border-bottom-right-radius: 0 !important;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.5);
-    
     > div {
-      background-color: #fff4;
       flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-
-    > div:first-of-type {
-      border-top-left-radius: 10px !important;
-    }
-
-    > div:last-child {
-      border-top-right-radius: 10px !important;
-    }
-
   }
-
   .grid_container {
     flex: 6;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-gap: 1px;
-    border-top-left-radius: 0 !important;
-    border-top-right-radius: 0 !important;
-  
     > div {
-      transition: background-color 0.25s ease-in;
       padding-left: 2.5px;
-      border-radius: 0px !important;
-      background-color: #fff8;
+      transition: background-color 0.25s ease-in;
     }
-  
-    > div:nth-of-type(36) {
-      border-bottom-left-radius: 10px !important;
-    }
-  
-    > div:nth-of-type(42) {
-      border-bottom-right-radius: 10px !important;
-    }
-  
     > div:hover {
-      transition: background-color 0.01s ease-in-out;
-      background-color: #fffa;
+      transition: all 0.01s ease-in-out;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
-  
-    .other_month {
-      background-color: rgba(195, 195, 195, 0.5);
-    }
-
-    .other_month:hover {
-      background-color: rgba(210, 210, 210, 0.65);
-    }
-
-    .green {
-      background-color: rgba(0, 255, 75, 0.4);
-    }
-
     .green:hover {
-      background-color: rgba(0, 255, 85, 0.65);
       cursor: pointer;
     }
-
-    .red {
-      background-color: rgba(255, 75, 75, 0.5);
-    }
-
     .red:hover {
-      background-color: rgba(255, 99, 71, 0.85);
       cursor: pointer;
     }
-
-    .todo {
-      background-color: rgba(255, 226, 39, 0.5);
-    }
-
     .todo:hover {
-      background-color: rgba(255, 226, 39, 0.75);
       cursor: pointer;
     }
   }
