--- a/apps/Advanced Todos/styles/Results.module.scss
+++ b/apps/Advanced Todos/styles/Results.module.scss
@@ -1,18 +1,18 @@
-.results_container {
-  flex: .5;
-  display: flex;
-  background: #5e667c;  /* fallback for old browsers */
+.dark {
+  background: -webkit-linear-gradient(to bottom, #3364df, #7a8090);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(rgba(70, 210, 255, 0.4), #00000000) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.light {
   background: -webkit-linear-gradient(to bottom, #a9aebb, #7a8090);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(#13214240, #5e7b9500) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  box-shadow: none !important;
-  // border-radius: 10px !important;
-  border-bottom-right-radius: 0px !important;
-  border-bottom-left-radius: 0px !important;
-
-  > div {
-    // height: 200px;
-    background-color: #0000 !important;
-    flex: 1;
+}
+.results_container {
+  flex: .5;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+@media screen and (max-width: 767px) {
+  .results_container {
+    flex: .9;
   }
 }
