--- a/apps/Advanced Todos/styles/App.module.scss
+++ b/apps/Advanced Todos/styles/App.module.scss
@@ -1,60 +1,11 @@
 .app {
-  min-height: 100vh;
-  // min-height: 500px;
-  width: 100%;
-  // background: rgba(129,171,200,1);
-  // background: radial-gradient(circle, rgba(129,171,200,1) 0%, rgba(56,59,60,1) 100%);
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
   padding-top: 10vh;
   padding-bottom: 125px;
-
-  div *::-webkit-scrollbar {
-    width: 12.5px;
-    height: 12.5px;
-  }
-  
-  div *::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.75);
-    border-radius: 6.25px
-  }
-  
-  div *::-webkit-scrollbar-thumb:hover {
-    background-color: #fffd;
-  }
-  
-  div *::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.125);
-    border-radius: 6.25px;
-    object-fit: fill;
-  }
-  
-  div *::-webkit-scrollbar-corner {
-    background-color: rgba(0, 0, 0, 0);
-  }
-
-  > div {
-
-    > div {
-      background: #5e667c;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #a9aebb, #7a8090);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(40deg, #132142, #5e7b95); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-      border-radius: 10px;
-      > div {
-        background-color: #fff8;
-        border-radius: 10px;
-      }
-    }
-  }
-
   .spacer {
     height: 2.5vw;
     visibility: hidden;
     flex-shrink: 0;
   }
-
   .left_container {
     height: 32.5vw;
     min-height: calc(500px + 2.5vw);
@@ -64,14 +15,39 @@
     flex-direction: column;
     margin-right: 2.5vw;
   }
-
   .right_container {
     height: 32.5vw;
     min-height: calc(500px + 2.5vw);
     width: 32.5vw;
     min-width: calc(425px); 
-    display: flex;
+  }
+  .vertical_container {
+    height: 16.25vw;
+    min-height: calc(250px + 2.5vw);
+    width: 16.25vw;
+    min-width: calc(250px + 2.5vw); 
+  }
+}
+@media screen and (max-width: 767px) {
+  .app {
+    padding-top: 10vw;
     flex-direction: column;
-
+    .left_container {
+      max-height: 160vw;
+      max-width: 80vw;
+      height: 800px;
+      width: 400px;
+      min-height: 0;
+      min-width: 0; 
+      margin-right: 0;
+    }
+    .vertical_container {
+      max-height: 80vw;
+      max-width: 80vw;
+      height: 400px;
+      width: 400px;
+      min-height: 0;
+      min-width: 0; 
+    }
   }
 }
