--- a/apps/Advanced Todos/styles/App.module.scss
+++ b/apps/Advanced Todos/styles/App.module.scss
@@ -1,6 +1,5 @@
 .app {
-  padding-top: 10vh;
-  padding-bottom: 125px;
+  padding-bottom: 7rem;
   .spacer {
     height: 2.5vw;
     visibility: hidden;
@@ -30,8 +29,8 @@
 }
 @media screen and (max-width: 767px) {
   .app {
-    padding-top: 10vw;
     flex-direction: column;
+    align-items: center;
     .spacer {
       min-height: 30px;
       height: 5vh;
