--- a/apps/Pricing Component/App.module.scss
+++ b/apps/Pricing Component/App.module.scss
@@ -5,10 +5,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
-  min-height: 650px;
   min-width: 200px;
+  padding-bottom: 7rem;
   // background-color: #8EC5FC;
   // background-image: linear-gradient(62deg, #c3e1ff 0%, #e5e1ff 100%);
   color: rgb(136, 151, 167);
@@ -16,7 +16,7 @@
   font-weight: bold;
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   flex-direction: column;
 
   h1 {
