--- a/apps/Visual Sort/App.module.scss
+++ b/apps/Visual Sort/App.module.scss
@@ -7,7 +7,7 @@
   height: 100%;
   width: 100%;
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
   // background: rgb(255, 255, 255);
   // background: radial-gradient(circle, rgb(80, 97, 128) 0%, rgb(0, 0, 0) 100%);
