--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,6 +1,5 @@
 @use 'sass:math';
 $frames: 100 / 30;
-
 @for $i from 1 through 6 {
   @keyframes close#{$i} {
     @for $j from 1 through 30 {
@@ -19,57 +18,21 @@ $frames: 100 / 30;
     }
   }
   @keyframes open#{$i} {
-    0% {
-      pointer-events: none;
-      opacity: 0;
-      margin-top: 0;
+    @for $j from 1 through 30 {
+      #{$j * $frames * 1%} {
+        opacity: $j * 1 / 30;
+        margin-top: $j * 150% / 30 * ($i - 1) + 175% * $j / 30;
+        margin-left: math.sin(math.cos(math.$pi * $i) * math.$pi * $j * 1 / 30) * 100%;
+      }
     }
-    100% {
-      opacity: 1;
-      margin-top: 150% * ($i - 1) + 175%;
-    }
-  }
-}
-.dark {
-  .open > div, .close > div {
-    box-shadow: 0 0 .25em #0008;
-    background-color: rgba(255, 255, 255, 0.8);
-  }
-  .open > div:hover {
-    background: white;
-    border-color: white;
-  }
-  i:hover { box-shadow: 0 0 1em white }
-  .moon:hover {
-    background-color: rgb(124, 58, 237);
-    box-shadow: 0 0 1em rgb(124, 58, 237);
-    border-color: rgb(124, 58, 237) !important;
-    color: white;
-  }
-}
-.light {
-  .open > div, .close > div {
-    box-shadow: 0 0 .5em #fff8;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-  }
-  .open > div:hover {
-    background: black;
-    border-color: black;
-  }
-  i:hover { box-shadow: 0 0 1em black }
-  .sun:hover {
-    background-color: rgb(251, 191, 36);
-    box-shadow: 0 0 1em rgb(251, 191, 36);
-    border-color: rgb(251, 191, 36) !important;
-    color: black;
   }
 }
 .open {
   @for $i from 1 through 6 {
     > div:nth-child(#{$i}) {
       opacity: 0;
-      animation: open#{$i} $i * 1 / 6 * .25s linear forwards;
+      animation: open#{$i} .25s ease-out forwards;
+      animation-delay: (7 - $i) * .05s;
       z-index: -1 * $i;
     }
   }
@@ -77,7 +40,7 @@ $frames: 100 / 30;
 .close {
   @for $i from 1 through 6 {
     > div:nth-child(#{$i}) {
-      animation: close#{$i} $i * 1 / 6 * .4s ease-out forwards
+      animation: close#{$i} $i * 1 / 6 * .5s ease-out forwards
     }
   }
 }
