--- a/styles/CodeCard.module.scss
+++ b/styles/CodeCard.module.scss
@@ -1,7 +1,6 @@
 .cardContainer:first-of-type {
-  margin-top: 0 !important;
+  margin-top: 0 !important
 }
-
 .cardContainer {
   margin-top: 75px;
   border-radius: 6.25px;
@@ -11,14 +10,12 @@
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
-
   .header {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.15);
     flex-shrink: 0;
     display: flex;
     position: relative;
-
     div {
       margin-right: 1px;
       padding: .5em;
@@ -27,57 +24,47 @@
       background-color: rgba(0, 0, 0, 0.10);
       transition: all .075s ease-in-out;
       @apply truncate;
-
       i {
-        margin-right: .5em;
+        margin-right: .5em
       }
     }
-
     div:last-of-type {
-      margin-right: 0;
+      margin-right: 0
     }
-
     div:hover {
       color: white;
       background-color: rgba(255, 255, 255, 0.025);
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
       cursor: pointer;
     }
-
     .selected {
       color: white;
       background: #944a90;
       background: -webkit-linear-gradient(to right, #0b879380, #944a9080);
       background: linear-gradient(to right, #0b879380, #944a9080);
     }
-
     .render {
       color: white;
       background-image: linear-gradient(83deg, rgba(39,66,65,.75) 0%, rgba(50,135,75,0.5) 100%);
     }
   }
-
   .wrapper {
     position: relative;
     transition: height .2s ease-in-out;
   }
-
   pre {
     flex: 1;
     padding: 10px;
     overflow-x: auto;
     transition: font-size .25s linear;
   }
-
   .output {
     font-family: Consolas, monaco, monospace;
     color: rgb(50, 225, 120) !important;
   }
-
   .consolas {
-    font-family: Consolas, monaco, monospace;
+    font-family: Consolas, monaco, monospace
   }
-
   iframe {
     height: 500px;
     width: 100%;
@@ -86,37 +73,31 @@
     background: linear-gradient(83deg, rgb(47, 97, 95) 0%, rgba(50,135,75,1) 100%);
   }
 }
-
 @media only screen and (max-width: 1024px) {
   .cardContainer {
     font-size: smaller;
-
     .header > div {
       width: 125px;
     }
   }
 }
-
 @media only screen and (max-width: 768px) {
   .cardContainer {
     width: 80vw;
     margin-top: 10vw;
     font-size: small;
-
     .header > div {
-        width: 100px;
+        width: 100px
     }
   }
 }
-
 @media only screen and (max-width: 640px) {
   .cardContainer {
     width: 90vw;
     margin-top: 5vw;
     font-size: x-small;
-
     .header > div {
-      width: 75px;
+      width: 75px
     }
   }
 }
