--- a/apps/Advanced Todos/styles/Transactions.module.scss
+++ b/apps/Advanced Todos/styles/Transactions.module.scss
@@ -1,5 +1,6 @@
 .dark {
-  box-shadow: 0 0 1.5em rgba(70, 210, 255, 0.7);
+  // box-shadow: 0 0 1.5em rgba(70, 210, 255, 0.7);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   .green {
     background-color: rgb(44, 180, 90);
   }
