--- a/apps/Advanced Todos/styles/Calander.module.scss
+++ b/apps/Advanced Todos/styles/Calander.module.scss
@@ -9,10 +9,10 @@
       background-color: rgba(37, 37, 37, 0.75);
       color: white;
     }
-    .other_month {
+    .alt {
       background-color: rgb(31, 41, 55);
     }
-    .other_month:hover {
+    .alt:hover {
       background-color: rgb(66, 80, 97);
     }
     .green {
@@ -51,10 +51,10 @@
     > div:hover {
       background-color: #fffa;
     }
-    .other_month {
+    .alt {
       background-color: rgba(140, 140, 140, 0.5);
     }
-    .other_month:hover {
+    .alt:hover {
       background-color: rgba(140, 140, 140, 0.75);
     }
     .green {
