--- a/apps/Advanced Todos/styles/Calander.module.scss
+++ b/apps/Advanced Todos/styles/Calander.module.scss
@@ -82,7 +82,7 @@
   height: 15vw;
   min-height: 250px;
   .days_container {
-    flex: .5;
+    // flex: .5;
     > div {
       flex: 1;
       display: flex;
