--- a/apps/Advanced Todos/styles/Results.module.scss
+++ b/apps/Advanced Todos/styles/Results.module.scss
@@ -3,8 +3,8 @@
   background: linear-gradient(rgba(70, 210, 255, 0.4), #00000000) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .light {
-  background: -webkit-linear-gradient(to bottom, #a9aebb, #7a8090);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(#13214240, #5e7b9500) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to bottom, #3364df, #7a8090);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(rgba(70, 104, 255, 0.5), #00000000) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .results_container {
   // border-top-left-radius: 1rem;
