--- a/apps/Advanced Todos/styles/Calander.module.scss
+++ b/apps/Advanced Todos/styles/Calander.module.scss
@@ -58,7 +58,7 @@
       background-color: rgba(140, 140, 140, 0.75);
     }
     .green {
-      background-color: springgreen;
+      background-color: limegreen;
     }
     .green:hover {
       background-color: rgb(124, 255, 168);
