--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,10 +2,20 @@
   .dark div  {
     background: url("/images/home/darkgalaxy.jpeg") no-repeat right top fixed; 
     background-size: auto 95%;
+    // animation: slideLeft 15s infinite linear;
   }
   .light div {
-    background: url("/images/home/test.jpeg") no-repeat right top fixed;
-    background-size: auto 95%;
+    background: url("/images/home/AdobeStock_253500845.jpg") repeat fixed;
+    background-size: 55vw 55vw;
+    animation: slideLeft 6000000000s infinite linear;
+  }
+  @keyframes slideLeft {
+    0% {
+      background-position-x: 0;
+    }
+    100% {
+      background-position-x: -10000000000%;
+    }
   }
   > div {
     height: 54.1%;
@@ -35,6 +45,9 @@
     }
   }
 }
+.section2 {
+  height: clamp(25vh, 70vw, 800px);
+}
 .placeholder1 {
   background: url("/images/home/placeholder1.png") center
 }
@@ -48,12 +61,22 @@
   background-size: cover;
   width: clamp(25vh, 22vw, 300px);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: transform .1s ease-in;
+}
+.placeholder:hover {
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+  cursor: pointer;
+  transform: scale(1.1);
 }
 @media (max-width: 639px) {
+  .section2 {
+    // height: clamp(25vh, 70vw, 800px);
+    height: 100vh;
+  }
   .placeholder {
-    height: 50vh;
-    width: clamp(35vh, 40vw, 400px);
-    margin-bottom: 20px;
+    height: clamp(40vh, 500px, 70vw);
+    width: 50%;
+    // margin-bottom: 20px;
     border-radius: 25px;
   }
 }
