--- a/styles/MirrorIcons.module.scss
+++ b/styles/MirrorIcons.module.scss
@@ -6,14 +6,14 @@
       transform: translate(-100%, 0)
     }
 }
-// @keyframes slide-blur {
-//   0% {
-//     transform: translate(0, 50%)
-//   }
-//   100% {
-//     transform: translate(-228%, 50%)
-//   }
-// }
+@keyframes slide-blur {
+  0% {
+    transform: translate(0, 50%)
+  }
+  100% {
+    transform: translate(-228%, 50%)
+  }
+}
 .slider_container {
   // animation: slide-icons 5s infinite linear;
 
