--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,7 +8,7 @@
   background: url(/images/home/darkgalaxy.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: right;
 }
 .svg_master_container {
   .dark div  {
@@ -134,6 +134,18 @@
 
 .section2 {
   height: clamp(25vh, 70vw, 800px);
+}
+.section2_light {
+  background: url(/images/home/AdobeStock_121270629.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.section2_dark {
+  background: url(/images/home/darkgalaxy.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .placeholder1 {
   background: url("/images/home/placeholder1.png") center
