--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,9 +10,9 @@
     background-position: right;
   }
   .svg_master_container > div div {
-    background: url("/images/home/AdobeStock_2310836743.jpg") repeat fixed;
-    background-size: 300px 300px;
-    animation: slideLeft 80000000000s infinite linear;
+    background: url("/images/home/Purple Nebula 4.1 - 1024x1024.png") repeat fixed;
+    background-size: 40vw 40vw;
+    animation: slideLeft 50000000000s infinite linear;
   }
 }
 .light > .header {
@@ -25,7 +25,7 @@
   .svg_master_container > div div {
     background: url("/images/home/AdobeStock_253500845.jpg") repeat fixed;
     background-size: 55vw 55vw;
-    animation: slideLeft 6000000000s infinite linear;
+    animation: slideLeft 9000000000s infinite linear;
   }
 }
 .header {  
