--- a/styles/MirrorIcons.module.scss
+++ b/styles/MirrorIcons.module.scss
@@ -1,6 +1,6 @@
 @keyframes slide-icons {
     0% {
-      transform: translate(0, 0)
+      transform: translate(-3px, 0)
     }
     100% {
       transform: translate(-100%, 0)
@@ -8,42 +8,34 @@
 }
 @keyframes slide-blur {
   0% {
-    transform: translate(0, 50%)
+    transform: translate(-3px, 50%)
   }
   100% {
-    transform: translate(-228%, 50%)
+    transform: translate(-100%, 50%)
   }
 }
-.slider_container {
-  // animation: slide-icons 5s infinite linear;
-
-
-  margin-bottom: 4rem;
-  // overflow: hidden;
-  display: flex;
-  align-items: flex-end;
-  
+.icon_animation {
+  animation: slide-icons 10s infinite linear;
+}
+.blur_animation {
+  animation: slide-blur 10s infinite linear;
+}
+.icon_container {
   > div {
-    // float: left;
-    // flex-shrink: 0;
-    
-    
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-    > div {
-      display: block !important;
-    }
+    flex-shrink: 0;
+    margin-left: 1.5rem;
+    display: flex;
   }
 }
 .platform_container {
-  animation: slide-blur 20s infinite linear;
-  
   > div {
-    
     transform: rotateX(180deg);
     flex-shrink: 0;
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
+    margin-left: 1.5rem;
+    display: flex;
+    img {
+      // transform: scale(0.5);
+    }
     > div {
       display: block !important;
     }
